href links on footer

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
  </main>
  <footer> 
         <div class="social-icons">
-            <a href="https://www.linkedin.com" target="_blank" aria-label="LinkedIn"><i class='bx bxl-linkedin'></i> LinkedIn</a>
-            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram"><i class='bx bxl-instagram'></i> Instagram</a>
-            <a href="https://www.github.com" target="_blank" aria-label="GitHub"><i class='bx bxl-github'></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/samuel-oliveira-08b048262/" target="_blank" aria-label="LinkedIn"><i class='bx bxl-linkedin'></i> LinkedIn</a>
+            <a href="https://instagram.com/samukzz_" target="_blank" aria-label="Instagram"><i class='bx bxl-instagram'></i> Instagram</a>
+            <a href="https://github.com/CodingWithSamuel?tab=projects" target="_blank" aria-label="GitHub"><i class='bx bxl-github'></i> GitHub</a>
         </div>
     </footer>
 </body>
