teste color in section p1

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     </section>
 
     <section>
-        <h3> - #</h3>
-        <p>
-        0000000000000000000000000000000000 teste 123
-        </p>
+        <h3> Cursos </h3>
+        <p1>
+        Ciencias da Computação - 2º Semestre ( Em Andamento ) 
+        </p1>
     </section>
  </main>
  <footer> 
