Change Color; Hover add; Fix Links;

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <section>
         <h3> Cursos </h3>
         <p1>
-        Ciencias da Computação - 2º Semestre ( Em Andamento ) 
+        Ciencias da Computação - 2º Semestre ( Em Andamento ) <br> 
+        <span style="color: rgb(0, 255, 34);"> Gestão de Projetos - Faculdade Anhanguera (Concluido) </span>
         </p1>
     </section>
  </main>
