Added Button, Added index js file, Added folder config, added progression bar, Added Register page, Added Toggle Menu

--- a/Login.html
+++ b/Login.html
@@ -27,7 +27,7 @@
         </form>
         <div id="message"></div> <!-- Adicionado para exibir mensagens -->
         <div class="register-link">
-            <p>Não tem uma conta? <a href="index.html">Registre-se agora</a></p>
+            <p> Quer ser um colaborador? <a href="Registro/resgistro.html">Registre-se agora</a></p>
         </div>
     </div>
 
