inserido meus contatos e mudança de background

--- a/About Fachini/index fachini.html
+++ b/About Fachini/index fachini.html
@@ -54,7 +54,7 @@
         
         <header> 
             <div class="center"> 
-                <img src="" alt="">
+                <img src="./img/FAchiniPicture.jpg" alt="">
             </div>
             <h1> Thiago Fachini </h1>
             <h2> Conhecimentos em Python-JavaScript-HTML </h2>
