Correção da Barra de progressão3

--- a/About Fachini/index fachini.html
+++ b/About Fachini/index fachini.html
@@ -97,13 +97,14 @@
                 <div class="progress-container">
                     <div class="progress-bar" id="progressBar2"></div>
                     <span id="progressPercent2">100%</span>
-                </div class="curso-container">
+                </div>
+            </div>
+            <div class="curso-container">
                 <p><span style="color: rgb(0, 0, 0);"> Proteção de Dados - Faculdade Anhanguera (Em Andamento) </span></p>
                 <div class="progress-container">
                     <div class="progress-bar" id="progressBar3"></div>
                     <span id="progressPercent3">25%</span>
-    
-            </div>
+                </div>
         
     <script src="index fachini.js"></script>
 </body>
