correção de linha

--- a/About Fachini/index fachini.html
+++ b/About Fachini/index fachini.html
@@ -56,7 +56,7 @@
             <div class="center"> 
                 <img src="./img/FAchiniPicture.jpg" alt="">
             </div>
-            <h1> Thiago Fachini </h1>
+            <center> <h1> Thiago Fachini </h1> </center>
             <h2> Conhecimentos em Python-JavaScript-HTML </h2>
      </header>
      <main>
