--- a/ConfiguraçõesAdmin/configurações.html
+++ b/ConfiguraçõesAdmin/configurações.html
@@ -12,7 +12,7 @@
         <a href="index.html"><i class="fas fa-arrow-left"></i> Voltar para a Página Inicial</a>
     </div>
     <div class="container">
-        <h2>Login</h2>
+      <center>  <h2>Login</h2>
         <form id="loginForm">
             <div class="input-group">
                 <label for="username">Usuário Admin:</label>
