MENU APROVAÇÃO ADICIONADO

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
                         <div id="userApprovalMenu" class="dropdown-menu" style="display: none;">
                         </div>
 
+                        <!-- MENUU para aprovação de usuários -->
+<div id="aprovarUsuarioModal" class="modal">
+    <div class="modal-content">
+        <span class="close-btn" id="closeBtn">&times;</span>
+        <h2> Aprovar Usuário </h2>
+        <p> Aqui você pode aprovar ou rejeitar usuários.</p>
+        <!-- TERMINAR AQUI! FAZER APROVAÇÃO FUNCIONAR!!! -->
+    </div>
+</div>
+
+
                         <button id="logout-btn" class="btn-logout">Sair</button>
                     
                 </li>              
