Pagina de Config de Admins Criada

--- a/ConfiguraçõesAdmin/configurações.html
+++ b/ConfiguraçõesAdmin/configurações.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 1 </title>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Página de Configurações</title>
     <link rel="stylesheet" href="configurações.css">
-</head>
-<body>
-    <!-- Fazer Pagina de configurações Para o Admin (html, css, js) -->
-      
-</body>
-<script src="configurações.js"></script>
+    
+  </head>
+  <body>
+
+    <div class="container">
+      <div class="header">
+        <h1>Configurações</h1>
+        <span id="admin-status"></span>
+      </div>
+      <div id="config-content">
+        <!-- O conteúdo de configuração aparecerá aqui -->
+      </div>
+    </div>
+  </body>
+  <script src="configurações.js"></script>
 </html>
