--- a/ConfiguraçõesAdmin/configurações.html
+++ b/ConfiguraçõesAdmin/configurações.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Fazer Pagina de configurações Para o Admin (html, css, js) -->
     <div class="botao-voltar">
-        <a href="index.html"><i class="fas fa-arrow-left"></i> Voltar para a Página Inicial</a>
+        <a href="/index.html"><i class="fas fa-arrow-left"></i> Voltar para a Página Inicial</a>
     </div>
     <div class="container">
       <center>  <h2>Login</h2>
