coloquei meu contato

--- a/About Fachini/index fachini.html
+++ b/About Fachini/index fachini.html
@@ -31,7 +31,7 @@
                      <a href="Contact fachini.html"> Contato </a>
                     </li>
                 <li id="login-item">
-                    <a href="Login.html"> É um Colaborador? </a>
+                    <a href="/Login.html"> É um Colaborador? </a>
                     <i class='bx bx-log-in' ></i>
                 
                 </li>
@@ -107,5 +107,19 @@
                 </div>
         
     <script src="index fachini.js"></script>
+    </main>
+    <footer> 
+        <body>
+        <div class="contato-container">
+         <h1>Contato</h1>
+         <div class="info-contato">
+      <div class="social-icons">
+        <p><i class="fas fa-envelope"></i> Email: tafc2209@gmail.com </p>
+            <p><a href="https://wa.me/553584012997" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></p>
+            <p><a href="https://github.com/ThiagoFachini" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
+            <p><a href="https://instagram.com/TH.FACHIN1_" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></p>
+     </div>
+    </footer>
+<script src="index fachini.html"></script>
 </body>
 </html>
