--- a/login/Login.html
+++ b/login/Login.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="botao-voltar">
-        <a href="index.html"><i class="fas fa-arrow-left"></i> Voltar para a Página Inicial</a>
+        <a href="../index.html"><i class="fas fa-arrow-left"></i> Voltar para a Página Inicial</a>
     </div>
 <div class="Login-image">
-<img src="img/Login.svg" alt="Login image">
+<img src="../img/Login.svg" alt="Login image">
 </div>
 
     <div class="container">
@@ -31,7 +31,7 @@
         </form>
         <div id="message"></div> <!-- Adicionado para exibir mensagens -->
         <div class="register-link">
-            <p> Quer ser um colaborador? <a href="Registro/resgistro.html">Registre-se agora</a></p>
+            <p> Quer ser um colaborador? <a href="../Registro/resgistro.html">Registre-se agora</a></p>
         </div>
     </div>
 
